                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_authz_user: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_authz_host: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_authz_groupfile: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_authz_dbm: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_authz_dbd: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_authnz_ldap: Support the expression parser within the require
     directives. [Graham Leggett]

  *) mod_ssl: Remove the hardcoded algorithm-type dependency for the
     SSLCertificateFile and SSLCertificateKeyFile directives, to enable
     future algorithm agility, and deprecate the SSLCertificateChainFile
     directive (obsoleted by SSLCertificateFile). [Kaspar Brand]

  *) mod_proxy: Remove <Proxy ~ wildcard-url> syntax which:
      - is equivalent to <ProxyMatch wildcard-url>
      - has never been documented
      - incorrectly checks parameters
      - is buggy
     [Christophe Jaillet]

  *) FreeBSD: Disable IPv4-mapped listening sockets by default for versions
     5+ instead of just for FreeBSD 5. PR 53824. [Jeff Trawick]

  *) mod_auth_form: Add a debug message when the fields on a form are not
     recognised. [Graham Leggett]

  *) mod_ssl: Add -t -DDUMP_CA_CERTS option which dumps the filenames of all
     configured SSL CA certificates to stdout the same way as DUMP_CERTS does.
     [Jan Kaluza]

  *) mod_cache_disk: Fix potential hangs on Windows when using mod_cache_disk. 
     PR55833. [Eric Covener]

  *) mod_headers: Allow the "value" parameter of Header and RequestHeader to 
     contain an ap_expr expression if prefixed with "expr=". [Eric Covener]
